Trying to fix wrap size problem.

--- a/css/base.css
+++ b/css/base.css
@@ -4,8 +4,8 @@
 
 body {
   	font-family: segoe ui,Arial,sans-serif;
-  	margin-left:auto;
-	margin-right:auto;
+  	margin-left: 0 auto;
+	margin-right: 0 auto;
 	background-color:#2b2922;
 
 /*	border: 1px solid #CCBE8A;
